<resources>
    <string name="app_name" translatable="false">CinemaList</string>
    <string name="nama" translatable="false">Fakhri Maulana Falah</string>
    <string name="about">Hi, I\'m Fakhri Maulana Falah, a Junior Programmer from Bandung City, West Java, Indonesia.\n\n   Scope :  \n- 2 Years of experience on Web Programming  \n- 1 Year of experience on Java Programming (Desktop)  \n- 1 Year of experience on Android Programming (Java and Kotlin)\n\nAdditional Info, this app only supports English and Bahasa Indonesia</string>
    <string name="about_me">About Me</string>
    <string name="rating">User\'s Score </string>
    <string name="unrated">Unrated</string>
    <string name="unavailable">The overview is unavailable in this language,unfortunately themoviedb API has not yet supported this language, try other movie or show title.</string>
    <string name="released_at">Released at </string>
    <string name="unreleased">Unreleased</string>
    <string name="language">Language</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="attention">This app need an active internet connection. Please refresh after internet is connected</string>
    <string name="error">Error, a mistake happened while trying to fetch data from API, please try again later</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="movie">Movie</string>
    <string name="show">Show</string>
    <string name="first_aired">First Aired at </string>
    <string name="the_movie_database">The Movie Database</string>
    <string name="back">Press back again to exit the app.</string>
    <string name="gmail">gmail</string>
    <string name="instagram">instagram</string>
    <string name="linkedin">linkedin</string>
    <string name="info">Info</string>
    <string name="list">List</string>
    <string name="card">Card</string>
    <string name="grid">Grid</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="no_favorite_shows_movies_yet">No Favorite Shows/Movies yet</string>
    <string name="duplicate_constraint_error">Data already added</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="error_delete">Data unavailable in favorites</string>
    <string name="title_popular">Popular</string>
    <string name="search">Search</string>
    <string name="search_query_hint_favorites">Search in favorites…</string>
    <string name="my_favorites">My Favorites</string>
    <string name="good_morning">Good Morning!</string>
    <string name="notification_text">C\'mon down!, let\'s see some popular movies airing!</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="show_daily_notifications">Show Daily Notifications</string>
    <string name="daily_notification_summary">Activate this to show daily notifications</string>
    <string name="release_notification_summary">Activate this to notify you when a new movie is released</string>
    <string name="release_notification">Notify me when a new movie is released</string>
    <string name="search_movies_shows">Search Movies/Shows</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_shows">Search Shows</string>
    <string name="no_data">No Data</string>
    <string name="has_released">%d Movie(s) has released today!</string>
    <string name="new_release">New Release!</string>
    <string name="and_more">+%d More</string>
    <string name="check_now">Check Now!</string>
</resources>
