<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/list"
        android:title="@string/list"/>

    <item
        android:id="@+id/card"
        android:title="@string/card"/>

    <item
        android:id="@+id/grid"
        android:title="@string/grid"/>

    <item android:title="@string/language"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"/>
</menu>