<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.fakhrimf.retrofit.movie.MovieUserActionListener" />

        <variable
            name="vm"
            type="com.fakhrimf.retrofit.model.MovieModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:onClick="@{()->listener.onClickItem(vm)}"
        android:background="?android:selectableItemBackground"
        android:layout_height="wrap_content">

        <ImageView
            imgRes="@{vm.backDropPath}"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha="0.6"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/movie_backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            app:cardBackgroundColor="#BF353535"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/containerImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/noInternet"
                        android:src="@drawable/ic_no_connection"
                        android:layout_width="75dp"
                        android:layout_height="100dp"
                        android:padding="20dp"
                        android:contentDescription="@string/movie_poster"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageViewItem"
                        imgRes="@{vm.posterPath}"
                        android:layout_width="75dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:maxWidth="200dp"
                    android:maxLines="2"
                    android:text="@{vm.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/containerImg"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxWidth="160dp"
                    android:maxLines="1"
                    app:set_release_date_movie="@{vm.releaseDate}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/containerImg"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="@string/released_at" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxWidth="160dp"
                    android:maxLines="1"
                    app:set_rating="@{vm.vote}"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/containerImg"
                    app:layout_constraintTop_toBottomOf="@+id/overview"
                    tools:text="@string/rating" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#0DFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>